Corrections based on FindBugs Report